# bosch-bme

./: .gitignore  CMakeLists.txt  README.md
bsec_use/: CMakeLists.txt  README.md  bsec_use.c  bsec_use.h
forced_mode/: CMakeLists.txt  README.md  forced_mode.c
i2c/: CMakeLists.txt  README.md  i2c.c
i2c/bme68x/: bme68x.c
includes/: CMakeLists.txt  README.md
includes/bme_api/: CMakeLists.txt  bme68x_API.c  bme68x_API.h
includes/bsec/: README.md
includes/littlefs-lib/: CMakeLists.txt  README.md  pico_hal.c
little_fs/: CMakeLists.txt  README.md  little_fs.c
parallel_mode/: CMakeLists.txt  README.md  parallel_mode.c
pico-bosch/: gittoken.txt
pico-bosch/forced_mode/: CMakeLists.txt  main.c
pico-bosch/forced_mode/bme_api/: CMakeLists.txt
pico-bosch/i2c/: CMakeLists.txt  main.c
pico-bosch/i2c/bme68x/: CMakeLists.txt
pico-bosch/parallel_mode/: CMakeLists.txt
